# couple-plantFATE-CWatM

./: .gitignore  coupling.py  plantFATE.csv  plantFATERunner.py  preprocess_data.py  pyproject.toml  simulator_pybind.py
R/: process_data.R
data/: metdata_cwatm_amz_processed.csv
params/: p.ini  p_daily.ini
pyplantFATE/: __init__.py  plantFATERunner.py
